--- a/src/components/shared/header/header.scss
+++ b/src/components/shared/header/header.scss
@@ -22,6 +22,9 @@ header {
     span {
       margin-right: 20px;
     }
+    a {
+      display: flex;
+    }
   }
 
 }
